# interviewbyte

./: .gitignore  CLAUDE.md  FUTURE_IMPROVEMENTS_PLAN.md  GOOGLE_SEARCH_CONSOLE_SETUP.md  IMPLEMENTATION_SUMMARY.md  MONETIZATION_PLAN.md  PRODUCTION_UPGRADE_GUIDE.md  PRODUCT_DIRECTORY_SUBMISSION.md  PRODUCT_HUNT_LAUNCH.md  README.md  REFUND_POLICY.md  RESUME_ANALYSIS.md  TECHNICAL_ARCHITECTURE.md  research.md
backend/: .env.example  BIRTH2DEATH_ARCHITECTURE.md  BOM_ANALYSIS_FINAL.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_SCRIPT_ALL_AIS_CONSENSUS.md  INTERVIEW_SCRIPT.md  INTERVIEW_SCRIPT_FINAL.md  LEARNING_LOG.md  OPENING_STATEMENT_FINAL.md  PHASE_1_1_COMPLETE.md  PHASE_1_2_COMPLETE.md  PHASE_1_3_COMPLETE.md  Procfile  QDRANT_DEPLOYMENT.md  README.md  check_star_stories.sql  fix_question_types.py  generate_embeddings.py  migrate_to_qdrant.py  nixpacks.toml  pyproject.toml  regenerate_all_embeddings.py  render.yaml  requirements.txt  review_qa_pairs.sql  run_migration_007.py  run_migrations_024_026.py  show_problem_stories.sql  test_latency_comparison.py  test_qa_cache_performance.py  test_question_detection_performance.py  test_rag_implementation.py
backend/app/: main.py
backend/app/api/: context_upload.py  interview.py  interview_profile.py  interview_sessions.py  lemon_squeezy.py  payments.py  profile.py  qa_pairs.py  subscriptions.py  websocket.py
backend/app/core/: config.py  rate_limit.py  supabase.py
backend/app/models/: __init__.py
backend/database/: README.md
backend/scripts/: grant_user_features.py
backend/tasks/: todo.md
car_wash/: README.md  (+9 more)
(+152 files in other folders)
